[gd_scene load_steps=4 format=3 uid="uid://dsvwsruw2mfk6"]

[ext_resource type="PackedScene" uid="uid://brt3f2i74x70n" path="res://gui/widgets/popups/WindowPopup.tscn" id="1_wmva6"]
[ext_resource type="Script" path="res://gui/widgets/popups/IOConfigPopup.gd" id="2_inwde"]
[ext_resource type="PackedScene" uid="uid://d2peohvka6nmb" path="res://gui/widgets/Stepper.tscn" id="3_u7du7"]

[node name="IOConfigPopup" instance=ExtResource("1_wmva6")]
script = ExtResource("2_inwde")

[node name="ContentBox" type="VBoxContainer" parent="Layout/Content" index="0"]
layout_mode = 2

[node name="ConfigContainer" type="MarginContainer" parent="Layout/Content/ContentBox" index="0"]
layout_mode = 2
size_flags_vertical = 3

[node name="MidiImportBox" type="VBoxContainer" parent="Layout/Content/ContentBox/ConfigContainer" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PatternSize" type="HBoxContainer" parent="Layout/Content/ContentBox/ConfigContainer/MidiImportBox" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/Content/ContentBox/ConfigContainer/MidiImportBox/PatternSize" index="0"]
layout_mode = 2
text = "PATTERN SIZE"

[node name="Spacer" type="Control" parent="Layout/Content/ContentBox/ConfigContainer/MidiImportBox/PatternSize" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PatternSizeValue" parent="Layout/Content/ContentBox/ConfigContainer/MidiImportBox/PatternSize" index="2" instance=ExtResource("3_u7du7")]
unique_name_in_owner = true
layout_mode = 2
max_value = 32

[node name="Padding" type="Control" parent="Layout/Content/ContentBox/ConfigContainer/MidiImportBox" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Label" type="Label" parent="Layout/Content/ContentBox/ConfigContainer/MidiImportBox" index="2"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"CreditsLabel"
text = "0 means AUTO"
horizontal_alignment = 2

[node name="ButtonBar" type="HBoxContainer" parent="Layout/Content/ContentBox" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"HBoxSpaced"
alignment = 2
